--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
   },
   "files.readonlyInclude": {
     "**/routeTree.gen.ts": true
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#013606",
+    "titleBar.activeBackground": "#024C08",
+    "titleBar.activeForeground": "#ECFFEE"
   }
 }
