--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "vercel": "^42.1.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
