--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.76.2",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
