--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "9.1.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.8",
